Fix layout issues: consistent image sizes and centered content

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -12,9 +12,12 @@ body {
 }
 
 .wrapper {
-  max-width: calc(1200px - (30px * 2));
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 30px;
+  box-sizing: border-box;
+  text-align: justify;
 }
 
 h1 {
@@ -55,6 +58,8 @@ p {
   margin-bottom: 20px;
   color: #555;
   font-weight: 300;
+  text-align: justify;
+  line-height: 1.6;
   & > b {
     font-weight: 500;
   }
@@ -192,18 +197,17 @@ pre {
 }
 
 .sys-img {
-  width: 90%;
-  margin-left: 5%;
-  max-width: 800px;
-  margin: 0 auto;
-  display: block;
+  text-align: center;
+  margin: 30px 0;
 }
 
 .sys-img img {
-  width: 100%;
+  width: auto;
   height: auto;
+  max-width: 100%;
+  max-height: 400px;
   object-fit: contain;
-  max-height: 500px;
+  display: inline-block;
 }
 
 
@@ -341,13 +345,11 @@ strong {
   }
 
   .sys-img {
-    width: 100%;
-    margin-left: 0;
-    max-width: 100%;
+    margin: 20px 0;
   }
   
   .sys-img img {
-    max-height: 400px;
+    max-height: 300px;
   }
 
   .acknowledgement {
